--- a/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -81,8 +81,8 @@
     "    file.write(\"\")\n",
     "\n",
     "# Input variables: will eventually structure this module as a function with the following input parameters\n",
-    "m1 = 10.\n",
-    "m2 = 15.\n",
+    "m1 = 15.\n",
+    "m2 = 10.\n",
     "f = 20.\n",
     "S1 = np.array([0.01, 0.02, -0.03])\n",
     "S2 = np.array([0.04, -0.05, 0.06])\n",
@@ -387,7 +387,8 @@
    "source": [
     "# v: initial velocity and velocity squared, since we use that quantity often\n",
     "v = np.cbrt(omega)\n",
-    "vsq = v*v"
+    "vsq = v*v\n",
+    "# GOOD NEWS: WE'RE FINDING THE SAME VALUE FOR V THAT LALSUITE COMPUTES!"
    ]
   },
   {
@@ -408,7 +409,7 @@
     "Taking the square of [BB2010](https://arxiv.org/abs/0912.3517) Equation (4.9),\n",
     "\n",
     "\\begin{equation*}\n",
-    "    a^{2} = \\frac{ {\\bf S}_{Kerr} \\cdot {\\bf S}_{Kerr} }{ M^{2} }\n",
+    "    a^{2} = \\frac{ {\\bf S}_{\\rm Kerr} \\cdot {\\bf S}_{\\rm Kerr} }{ M^{2} }\n",
     "\\end{equation*}\n",
     "\n",
     "so that\n",
@@ -426,7 +427,7 @@
    "source": [
     "# Convert the separation vector from Cartesian to spherical coordinates\n",
     "SKerr = np.add(S1, S2)\n",
-    "asq = norm(SKerr)*Msqinv\n",
+    "asq = np.dot(SKerr,SKerr)*Msqinv\n",
     "a = np.sqrt(asq)"
    ]
   },
@@ -481,276 +482,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "deltaT = 6.023946231319501e+02\n",
-      "\n",
-      "rho2invLamb = 1.530228410787548e-03\n",
-      "\n",
-      "expnu = 9.601048728249263e-01\n",
-      "\n",
-      "deltaT = 6.023946231319501e+02\n",
-      "\n",
-      "rho2invLamb = 1.530228410787548e-03\n",
-      "\n",
-      "expnu = 9.601048728249263e-01\n",
-      "\n",
-      "deltaT = 6.023946231319501e+02\n",
-      "\n",
-      "rho2invLamb = 1.530228410787548e-03\n",
-      "\n",
-      "expnu = 9.601048728249263e-01\n",
-      "\n",
-      "deltaT = 6.023946418452259e+02\n",
-      "\n",
-      "rho2invLamb = 1.530228365183503e-03\n",
-      "\n",
-      "expnu = 9.601048734310861e-01\n",
-      "\n",
-      "deltaT = 6.023946231319501e+02\n",
-      "\n",
-      "rho2invLamb = 1.530228410787548e-03\n",
-      "\n",
-      "expnu = 9.601048728249263e-01\n",
-      "\n",
-      "deltaT = 6.023946231319501e+02\n",
-      "\n",
-      "rho2invLamb = 1.530228410787548e-03\n",
-      "\n",
-      "expnu = 9.601048728249263e-01\n",
-      "\n",
-      "deltaT = 8.495969119028826e+05\n",
-      "\n",
-      "rho2invLamb = 1.174477589737905e-06\n",
-      "\n",
-      "expnu = 9.989156787939935e-01\n",
-      "\n",
-      "deltaT = 1.106071512617833e+06\n",
-      "\n",
-      "rho2invLamb = 9.023829937594621e-07\n",
-      "\n",
-      "expnu = 9.990496098133147e-01\n",
-      "\n",
-      "deltaT = 6.023946418452259e+02\n",
-      "\n",
-      "rho2invLamb = 1.530228365183503e-03\n",
-      "\n",
-      "expnu = 9.601048734310861e-01\n",
-      "\n",
-      "deltaT = 6.023946231319501e+02\n",
-      "\n",
-      "rho2invLamb = 1.530228410787548e-03\n",
-      "\n",
-      "expnu = 9.601048728249263e-01\n",
-      "\n",
-      "deltaT = 6.023946231319501e+02\n",
-      "\n",
-      "rho2invLamb = 1.530228410787548e-03\n",
-      "\n",
-      "expnu = 9.601048728249263e-01\n",
-      "\n",
-      "deltaT = 8.495969119028826e+05\n",
-      "\n",
-      "rho2invLamb = 1.174477589737905e-06\n",
-      "\n",
-      "expnu = 9.989156787939935e-01\n",
-      "\n",
-      "deltaT = 1.106071512617833e+06\n",
-      "\n",
-      "rho2invLamb = 9.023829937594621e-07\n",
-      "\n",
-      "expnu = 9.990496098133147e-01\n",
-      "\n",
-      "deltaT = 2.558841774941915e+05\n",
-      "\n",
-      "rho2invLamb = 3.892597335075565e-06\n",
-      "\n",
-      "expnu = 9.980250835534609e-01\n",
-      "\n",
-      "deltaT = 9.206580391310596e+03\n",
-      "\n",
-      "rho2invLamb = 1.063774562339177e-04\n",
-      "\n",
-      "expnu = 9.896325594081308e-01\n",
-      "\n",
-      "deltaT = 1.487032688962335e+04\n",
-      "\n",
-      "rho2invLamb = 6.615410659711070e-05\n",
-      "\n",
-      "expnu = 9.918332471691118e-01\n",
-      "\n",
-      "deltaT = 9.764256124747844e+03\n",
-      "\n",
-      "rho2invLamb = 1.003624062136886e-04\n",
-      "\n",
-      "expnu = 9.899314317499167e-01\n",
-      "\n",
-      "deltaT = 1.106831530595646e+02\n",
-      "\n",
-      "rho2invLamb = 7.477227832854032e-03\n",
-      "\n",
-      "expnu = 9.097269660095931e-01\n",
-      "\n",
-      "deltaT = 2.273109181953503e+03\n",
-      "\n",
-      "rho2invLamb = 4.218566834022499e-04\n",
-      "\n",
-      "expnu = 9.792478238475214e-01\n",
-      "\n",
-      "deltaT = 3.512634941180176e+01\n",
-      "\n",
-      "rho2invLamb = 2.042268845206249e-02\n",
-      "\n",
-      "expnu = 8.469796281466961e-01\n",
-      "\n",
-      "deltaT = 1.857967109195792e+03\n",
-      "\n",
-      "rho2invLamb = 5.138255080290175e-04\n",
-      "\n",
-      "expnu = 9.770726143863274e-01\n",
-      "\n",
-      "deltaT = 1.106334866684641e+02\n",
-      "\n",
-      "rho2invLamb = 7.480270055427713e-03\n",
-      "\n",
-      "expnu = 9.097078418116848e-01\n",
-      "\n",
-      "deltaT = 3.512635065873654e+01\n",
-      "\n",
-      "rho2invLamb = 2.042268784348180e-02\n",
-      "\n",
-      "expnu = 8.469796305602972e-01\n",
-      "\n",
-      "deltaT = 3.512634941180176e+01\n",
-      "\n",
-      "rho2invLamb = 2.042268845206249e-02\n",
-      "\n",
-      "expnu = 8.469796281466961e-01\n",
-      "\n",
-      "deltaT = 3.512634941180176e+01\n",
-      "\n",
-      "rho2invLamb = 2.042268845206249e-02\n",
-      "\n",
-      "expnu = 8.469796281466961e-01\n",
-      "\n",
-      "deltaT = 2.353848216714125e+01\n",
-      "\n",
-      "rho2invLamb = 2.840785576613506e-02\n",
-      "\n",
-      "expnu = 8.177272200177091e-01\n",
-      "\n",
-      "deltaT = 7.272501753543803e+00\n",
-      "\n",
-      "rho2invLamb = 6.910003082604937e-02\n",
-      "\n",
-      "expnu = 7.088935712449189e-01\n",
-      "\n",
-      "deltaT = -2.024590928937381e+00\n",
-      "\n",
-      "rho2invLamb = 4.326854717987038e+00\n",
-      "\n",
-      "expnu = nan\n",
-      "\n",
-      "deltaT = nan\n",
-      "\n",
-      "rho2invLamb = nan\n",
-      "\n",
-      "expnu = nan\n",
-      "\n",
-      "deltaT = 7.272502062452971e+00\n",
-      "\n",
-      "rho2invLamb = 6.910002876750215e-02\n",
-      "\n",
-      "expnu = 7.088935757412526e-01\n",
-      "\n",
-      "deltaT = 7.272501753543803e+00\n",
-      "\n",
-      "rho2invLamb = 6.910003082604937e-02\n",
-      "\n",
-      "expnu = 7.088935712449189e-01\n",
-      "\n",
-      "deltaT = 7.272501753543803e+00\n",
-      "\n",
-      "rho2invLamb = 6.910003082604937e-02\n",
-      "\n",
-      "expnu = 7.088935712449189e-01\n",
-      "\n",
-      "deltaT = 5.781476649415203e+00\n",
-      "\n",
-      "rho2invLamb = 8.094613718878783e-02\n",
-      "\n",
-      "expnu = 6.840966320757151e-01\n",
-      "\n",
-      "deltaT = 3.308768816197333e+00\n",
-      "\n",
-      "rho2invLamb = 1.160079599901967e-01\n",
-      "\n",
-      "expnu = 6.195510636309414e-01\n",
-      "\n",
-      "deltaT = -5.456100575137209e-02\n",
-      "\n",
-      "rho2invLamb = 3.161570238810728e-01\n",
-      "\n",
-      "expnu = nan\n",
-      "\n",
-      "deltaT = nan\n",
-      "\n",
-      "rho2invLamb = nan\n",
-      "\n",
-      "expnu = nan\n",
-      "\n",
-      "deltaT = 3.308768978301579e+00\n",
-      "\n",
-      "rho2invLamb = 1.160079565352383e-01\n",
-      "\n",
-      "expnu = 6.195510695818018e-01\n",
-      "\n",
-      "deltaT = 3.308768816197333e+00\n",
-      "\n",
-      "rho2invLamb = 1.160079599901967e-01\n",
-      "\n",
-      "expnu = 6.195510636309414e-01\n",
-      "\n",
-      "deltaT = 3.308768816197333e+00\n",
-      "\n",
-      "rho2invLamb = 1.160079599901967e-01\n",
-      "\n",
-      "expnu = 6.195510636309414e-01\n",
-      "\n",
-      "deltaT = 2.713688450548943e+00\n",
-      "\n",
-      "rho2invLamb = 1.304546621224250e-01\n",
-      "\n",
-      "expnu = 5.949901763238528e-01\n",
-      "\n"
+      "a = 2.622975409720800e-03\n",
+      "\n",
+      "KK = 4.143334255972881e-01, k0 = -7.874655261784522e-01, k1 = -6.720556724739575e-01, k2 = -9.846190757404837e-01, k3 = 2.047561620390203e-01, k4 = 1.499360363944979e+01, k5 = -7.129366404491681e+01, k5l = 1.038090590357980e+01, d1 = -6.950000000000000e+01, d1v2 = -7.600600000000000e+01, dheffSS = 2.750000000000000e+00, dheffSSv2 = 1.897308000000000e+01\n",
+      "\n",
+      "[ 1.00007096 -0.00177108 -0.00774849]\n",
+      "[25.56350467  0.19778338  0.2       ]\n",
+      "[ 1.00007096 -0.00177108 -0.00774849]\n",
+      "[25.56350467  0.19778338  0.2       ]\n",
+      "[ 1.00007096 -0.00177108 -0.00774849]\n",
+      "[25.56350467  0.19778338  0.2       ]\n",
+      "[ 1.00007096 -0.00177108 -0.00774849]\n",
+      "[25.56350505  0.19778338  0.2       ]\n",
+      "[ 1.00007096 -0.00177108 -0.00774849]\n",
+      "[25.56350467  0.19778339  0.2       ]\n",
+      "[ 1.00007096 -0.00177108 -0.00774849]\n",
+      "[25.56350467  0.19778338  0.2       ]\n",
+      "[ 8.74541974e+00  6.29901084e-04 -7.73591175e-03]\n",
+      "[858.7834412    5.42355059 -34.76843485]\n",
+      "[nan nan nan]\n",
+      "[993.11849063   9.08831493  13.36394845]\n",
+      "[ 1.00007096 -0.00177108 -0.00774849]\n",
+      "[25.56350505  0.19778338  0.2       ]\n",
+      "[ 1.00007096 -0.00177108 -0.00774849]\n",
+      "[25.56350467  0.19778339  0.2       ]\n",
+      "[ 1.00007096 -0.00177108 -0.00774849]\n",
+      "[25.56350467  0.19778338  0.2       ]\n",
+      "[ 8.74541974e+00  6.29901084e-04 -7.73591175e-03]\n",
+      "[858.7834412    5.42355059 -34.76843485]\n",
+      "[nan nan nan]\n",
+      "[993.11849063   9.08831493  13.36394845]\n",
+      "[nan nan nan]\n",
+      "[nan nan nan]\n",
+      "[nan nan nan]\n",
+      "[nan nan nan]\n",
+      "[nan nan nan]\n",
+      "[nan nan nan]\n",
+      "[nan nan nan]\n",
+      "[nan nan nan]\n",
+      "[nan nan nan]\n",
+      "[nan nan nan]\n",
+      "[nan nan nan]\n",
+      "[nan nan nan]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "SEOBNR_Playground_Pycodes/numpy_expressions.py:76: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  expnu = np.sqrt(deltaT*rho2invLamb)\n",
-      "SEOBNR_Playground_Pycodes/numpy_expressions.py:96: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  B = np.sqrt(deltaT)\n",
-      "SEOBNR_Playground_Pycodes/numpy_expressions.py:98: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  sqrtdeltaR = np.sqrt(deltaR)\n",
-      "SEOBNR_Playground_Pycodes/numpy_expressions.py:150: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  Hns = np.sqrt(Hnspt2*invLamb)+invLamb*Hnspt1\n",
-      "SEOBNR_Playground_Pycodes/numpy_expressions.py:369: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  Htmp101 = np.sqrt(Htmp49)\n",
-      "SEOBNR_Playground_Pycodes/numpy_expressions.py:371: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  Htmp103 = np.sqrt(Htmp77)\n",
-      "SEOBNR_Playground_Pycodes/numpy_expressions.py:386: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  Htmp118 = np.sqrt(Htmp63)\n",
-      "SEOBNR_Playground_Pycodes/numpy_expressions.py:409: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  Hreal = np.sqrt(Htmp58*(Htmp100*Htmp47*Htmp66*Htmp79*Htmp98*(-Htmp102 + Htmp105) + Htmp103*Htmp134*Htmp140*(-Htmp103*Htmp109*Htmp124*Htmp125*Htmp127*Htmp128*Htmp28*Htmp53 + Htmp11*Htmp118*(Htmp102*(Htmp102*Htmp114*(-Htmp136*Htmp137 + Htmp139 + Htmp99*(-Htmp135*Htmp138 + Htmp137*(Htmp127*Htmp136 - Htmp136) + Htmp139)) + Htmp115*Htmp116*Htmp124*Htmp135) - 1.0*Htmp105*Htmp111*Htmp116*Htmp122*Htmp47*(-Htmp120*Htmp131 + Htmp120 - Htmp129/2 - Htmp130/2)))/(Htmp112*Htmp78) + Htmp118*Htmp123*Htmp140*(Htmp48*Htmp55 + Htmp80*(-4*Htmp11*Htmp22 + Htmp133*Htmp54))*(-Htmp1*Htmp104*Htmp114*Htmp128*Htmp70 + Htmp110*Htmp116 + Htmp50*Htmp53*(-Htmp0*Htmp116*Htmp62*Htmp63 + Htmp109*Htmp117*Htmp119 + Htmp113*Htmp116))/2 - Htmp121*Htmp123*Htmp14**(3/2)*Htmp51*(-Htmp0*Htmp101*Htmp119*(Htmp101*Htmp116*Htmp117 - Htmp114*Htmp115) + Htmp109*(-Htmp110 + Htmp50*(-Htmp113*Htmp53 + Htmp71))) + Htmp2*eta*(dheffSS*(Htmp10*Htmp9 + Htmp3*Htmp6 + Htmp7*Htmp8) + dheffSSv2)*(s1x**2 + s1y**2 + s1z**2 + s2x**2 + s2y**2 + s2z**2) + Htmp29*(Htmp109*(3*Htmp106 + 3*Htmp107 + 3*Htmp108)/2 - Htmp95**2/2 - Htmp96**2/2 - Htmp97**2/2) + Htmp47*Htmp48*Htmp57 + Htmp79*np.sqrt(Htmp77*(Htmp23*Htmp38**4*Htmp39**4*Htmp58*(4 - 3*eta) + Htmp76)) + Htmp80*Htmp98 - 1) + 1)\n",
-      "SEOBNR_Playground_Pycodes/numpy_expressions.py:566: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  tmp156 = np.sqrt(Hnspt2*invLamb)/Hnspt2\n",
-      "SEOBNR_Playground_Pycodes/numpy_expressions.py:568: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  tmp158 = tmp103*np.sqrt(deltaT*rho2invLamb)/rho2invLamb\n",
-      "SEOBNR_Playground_Pycodes/numpy_expressions.py:627: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  tmp217 = np.sqrt(deltaT)\n",
-      "SEOBNR_Playground_Pycodes/numpy_expressions.py:643: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  tmp233 = 1/np.sqrt(deltaR)\n"
+      "SEOBNR_Playground_Pycodes/numpy_expressions.py:682: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  tmp275 = eta/np.sqrt(tmp77*(H - 1) + 1)\n"
      ]
     }
    ],
@@ -765,19 +546,24 @@
     "from SEOBNR_Playground_Pycodes.numpy_expressions import compute_dHdq\n",
     "from SEOBNR.constant_coeffs import compute_const_coeffs\n",
     "\n",
-    "KK, c0k2, c1k2, c0k3, c1k3, c0k4, c1k4, c2k4, c0k5, c1k5, c2k5, k0, k1, k2, k3, k4, k5, k5l, d1, d1v2, dheffSS, dheffSSv2 = compute_const_coeffs(eta,gamma,a)\n",
+    "KK, k0, k1, k2, k3, k4, k5, k5l, d1, d1v2, dheffSS, dheffSSv2 = compute_const_coeffs(eta,gamma,a)\n",
     "\n",
     "# Define the function of which we want to find the roots\n",
     "def root_func(F):\n",
     "    #Recompute Hamiltonian derivatives using latest minimization guess\n",
-    "    derivs = compute_dHdq(m1, m2, eta, F[0], 0., 0., 0., F[1], F[2], S1[0], S1[1], S1[2], S2[0], S2[1], S2[2], KK, c0k2, c1k2, c0k3, c1k3, c0k4, c1k4, c2k4, c0k5, c1k5, c2k5, k0, k1, k2, k3, k4, k5, k5l, d1, d1v2, dheffSS, dheffSSv2, tortoise)\n",
-    "    return [ derivs[0] + (derivs[5]*F[2] - derivs[4]*F[1])/(F[0]*F[0]), -derivs[5]/F[0], derivs[4]/F[0] - omega ]\n",
+    "\n",
+    "    derivs = compute_dHdq(m1, m2, eta, F[0], np.pi/2., 0., 0., F[1], F[2], S1[0], S1[1], S1[2], S2[0], S2[1], S2[2], KK, k0, k1, k2, k3, k4, k5, k5l, d1, d1v2, dheffSS, dheffSSv2, tortoise)\n",
+    "    quagsire = np.array([ derivs[0] + (derivs[5]*F[2] - derivs[4]*F[1])/(F[0]*F[0]), -derivs[5]/F[0], derivs[4]/F[0] - omega ])\n",
+    "    return [ derivs[0] + (-derivs[5]*F[2] - derivs[4]*F[1])/F[0], -derivs[5]/F[0], derivs[4]/F[0] - omega ]\n",
     "\n",
     "# Inital root guess\n",
     "root_guess = [1/(v*v), v, 0.2]\n",
     "\n",
     "# Find the roots of root_func\n",
     "soln = root(root_func, root_guess, args=(), method='hybr', jac=None, tol=None, callback=None)\n",
+    "#print(\"v = %.15e\\n\" % v)\n",
+    "#print(soln.success)\n",
+    "#print(soln.message)\n",
     "\n",
     "# Populate separation (q) and momentum (p) vectors with the results of root() \n",
     "q = np.array([soln.x[0], 0., 0.])\n",
