--- a/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
+++ b/Tutorial-GiRaFFE_NRPy_Ccode_library-Stilde-flux.ipynb
@@ -30,7 +30,25 @@
     "$$\n",
     "We can then see that, if we rewrite this, the right-hand side (RHS) describing the time evolution $\\partial_t \\tilde{S}_i$ consists of two terms:\n",
     "\n",
-    "It is the flux term that concerns us here; the following function will compute the value inside the parentheses so that we can easily take its derivative later.This algorithm is not quite as accessible as the much simpler finite-difference methods; as such, [this notebook](https://mybinder.org/v2/gh/python-hydro/how_to_write_a_hydro_code/master) is recommended as an introduction. It covers a simpler reconstruction scheme, and proved useful in preparing the documentation for this more complicated scheme.\n",
+    "It is the flux term that concerns us here; the following functions will compute the value inside the parentheses so that we can easily take its derivative later. Having reconstructed the values of $v^i_{(n)}$ and $B^i$ on the cell faces, we will now compute the value of the flux of $\\tilde{S}_i$ on each face. For each component of $\\tilde{S}_i$ in each direction, we compute the flux as\n",
+    "$$\n",
+    "{\\rm st\\_j\\_flux} = \\frac{c_{\\rm min} f_{\\rm R} + c_{\\rm max} f_{\\rm L} - c_{\\rm min} c_{\\rm max} ({\\rm st\\_j\\_r}-{\\rm st\\_j\\_l})}{c_{\\rm min} + c_{\\rm max}},\n",
+    "$$\n",
+    "where \n",
+    "$$\n",
+    "f = \\alpha \\sqrt{\\gamma} \\left( (\\rho+b^2)(u^0 v^j) u_i + (P+\\frac{1}{2}b^2) \\delta_{ji} - b^j b_i \\right)\n",
+    "$$\n",
+    "and\n",
+    "$$\n",
+    "{\\rm st\\_j} = \\alpha \\sqrt{\\gamma} \\left( (\\rho+b^2) u^0 u_i - b^t b_i \\right).\n",
+    "$$\n",
+    "Note that these two quantities are computed on both the left and right sides of the cell face. We will be able to draw heavily on the module [Tutorial-u0_smallb_Poynting-Cartesian.ipynb](Tutorial-u0_smallb_Poynting-Cartesian.ipynb) to compute $u^0$, $u^i$, and $b^\\mu$, as well as the index-lowered forms of those vectors.\n",
+    "\n",
+    "The speeds $c_\\min$ and $c_\\max$ are characteristic speeds that waves can travel through the plasma. In GRFFE, the expressions defining them reduce a function of only the metric quantities. $c_\\min$ is the negative of the minimum amongst the speeds $c_-$ and $0$ and $c_\\max$ is the maximum amongst the speeds $c_+$ and $0$. The speeds $c_\\pm = \\sqrt{b^2-4ac}$ must be calculated on both the left and right faces, where \n",
+    "$$a = 1/\\alpha^2,$$ \n",
+    "$$b = 2 \\beta^i / \\alpha^2$$\n",
+    "and $$c = g^{ii} - (\\beta^i)^2/\\alpha^2.$$\n",
+    "\n",
     "\n",
     "The algorithm for finite-volume methods in general is as follows: \n",
     "\n",
